# demo-aws-stepfunctions-local

./: .gitignore  README.md  pyproject.toml  state_machine_definition.asl.json
tests/: conftest.py  state_machine_mock_config.json  test_state_machine.py
