[project]
name = "demo-aws-stepfunctions-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "boto3-stubs[stepfunctions]>=1.35.77",
    "boto3>=1.35.77",
    "docker>=7.1.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "docker-stubs>=0.1.0",
]

[tool.mypy]
disallow_untyped_calls = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "I", # isort
    "E", # pycodestyle
]

ignore = [
    "E501", # pycodestyle - Line too long
]
